<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/fragmentLogin">
    <fragment
        android:id="@+id/fragmentLogin"
        android:name="ru.aleksandrorlov.shoeshop.fragment.FragmentLogin"
        android:label="@string/app_menu_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_fragmentLogin_to_fragmentWelcome"
            app:destination="@id/fragmentWelcome"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/fragmentManual"
        android:name="ru.aleksandrorlov.shoeshop.fragment.FragmentManual"
        android:label="@string/app_menu_manual"
        tools:layout="@layout/fragment_manual" >
        <action
            android:id="@+id/action_fragmentManual_to_fragmentShoeList"
            app:destination="@id/fragmentShoeList"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/fragmentAddShoe"
        android:name="ru.aleksandrorlov.shoeshop.fragment.FragmentAddShoe"
        android:label="@string/app_menu_add_shoe"
        tools:layout="@layout/fragment_add_shoe" >
    <action
        android:id="@+id/action_fragmentAddShoe_to_fragmentShoeList"
        app:destination="@id/fragmentShoeList"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpTo="@id/fragmentShoeList"
        app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/fragmentShoeList"
        android:name="ru.aleksandrorlov.shoeshop.fragment.FragmentShoeList"
        android:label="@string/app_menu_shoe_list"
        tools:layout="@layout/fragment_shoe_list" >
        <action
            android:id="@+id/action_fragmentShoeList_to_fragmentShoeAdd"
            app:destination="@id/fragmentAddShoe"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim" />
    </fragment>
    <fragment
        android:id="@+id/fragmentWelcome"
        android:name="ru.aleksandrorlov.shoeshop.fragment.FragmentWelcome"
        android:label="@string/app_menu_welcome"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_fragmentWelcome_to_fragmentManual"
            app:destination="@id/fragmentManual"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
</navigation>